# zellij

./: Cargo.toml  PORTING_PLAN.md
.github/workflows/: e2e.yml  release.yml  rust.yml
src/: commands.rs  main.rs  stack_diagnostics.rs
src/tests/e2e/: cases.rs  remote_runner.rs
src/tests/fixtures/: append-echo-script.ps1
xtask/src/: ci.rs
zellij-client/: Cargo.toml
zellij-client/src/: lib.rs  os_input_output.rs  stdin_handler.rs
zellij-client/src/web_client/: ipc_listener.rs  mod.rs
zellij-os/: Cargo.toml
zellij-os/examples/: conpty_repro.rs
zellij-os/src/: lib.rs  process.rs  pty.rs  shell.rs  signals.rs
zellij-server/: Cargo.toml
zellij-server/src/: background_jobs.rs  lib.rs  os_input_output.rs  pty.rs  screen.rs  terminal_bytes.rs
zellij-server/src/plugins/: mod.rs  pinned_executor.rs  wasm_bridge.rs  zellij_exports.rs
zellij-server/src/tab/unit/: layout_applier_tests.rs  tab_integration_tests.rs  tab_tests.rs
zellij-server/src/unit/: os_input_output_tests.rs  screen_tests.rs
zellij-utils/: Cargo.toml
zellij-utils/src/: consts.rs  ipc.rs  sessions.rs  setup.rs  web_server_commands.rs
zellij-utils/src/input/unit/: layout_test.rs
zellij-utils/src/ipc/tests/: socket_tests.rs
