[package]
name = "zellij-os"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform OS abstraction layer for Zellij"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
portable-pty = { workspace = true }
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
signal-hook = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true }
tokio = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
